k8s/adr-member.yml
apiVersion: v1
kind: Service
metadata:
  name: adr-member
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: 8081
    - name: grpc
      port: 6566
      targetPort: 6566
  selector:
    app: adr-member
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adr-member
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adr-member
  template:
    metadata:
      labels:
        app: adr-member
    spec:
      containers:
        - name: adr-member
          image: lv2023100/adr-member
          imagePullPolicy: Always
          tty: true
          ports:
            - name: http
              protocol: TCP
              containerPort: 8081
            - name: grpc
              protocol: TCP
              containerPort: 6566
