k8s/adr-web.yml
apiVersion: v1
kind: Service
metadata:
  name: adr-web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8083
      targetPort: 8083
  selector:
    app: adr-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adr-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adr-web
  template:
    metadata:
      labels:
        app: adr-web
    spec:
      containers:
        - name: adr-web
          image: lv2023100/adr-web
          imagePullPolicy: Always
          tty: true
          ports:
            - name: http
              protocol: TCP
              containerPort: 8083
